--- a/src/sass/base/_extends.scss
+++ b/src/sass/base/_extends.scss
@@ -66,3 +66,10 @@ $loading__after__border: 5px solid $primary-color !default;
         transform: rotate(360deg);
     }
 }
+
+
+%no-button {
+    background-color: transparent;
+    border: 0;
+    outline: 0;
+}
