--- a/src/sass/components/_info.scss
+++ b/src/sass/components/_info.scss
@@ -34,6 +34,7 @@
         display: inline-block;
     }
     &-link {
+        overflow-wrap: break-word; // ?
         text-decoration: none;
         color: inherit;
         &:hover {
