--- a/src/sass/components/colors/_colors.scss
+++ b/src/sass/components/colors/_colors.scss
@@ -12,6 +12,9 @@ $color-black__color: $color__black-1 !default;
 // .color-primary
 $color-primary__color: $primary-color !default;
 
+// .color-primary-dark
+$color-primary-dark__color: $primary-color-dark !default;
+
 // .color-primary-text
 $color-primary-text__color: $primary-text-color !default;
 
@@ -34,6 +37,9 @@ $color-github__color: $color__github !default;
     }
     &-primary {
         color: $color-primary__color;
+        &-dark {
+            color: $color-primary-dark__color;
+        }
         &-text {
             color: $color-primary-text__color;
         }
