--- a/src/sass/components/icons/_icons.scss
+++ b/src/sass/components/icons/_icons.scss
@@ -18,6 +18,7 @@ $icon-5__font-size: $icon__font-size * 5 !default;
 
 
 .icon {
+    position: relative;
     &::before {
         display: inline-block;
         font-family: $icon__font-family;
@@ -110,6 +111,9 @@ $icon-5__font-size: $icon__font-size * 5 !default;
     }
     &-mail-alt:before {
         content: '\f0e0';
+    }
+    &-menu:before {
+        content: '\f0c9';
     }
     &-mobile:before {
         content: '\f10b';
