--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -78,6 +78,10 @@
     @import 'components/site-nav';
 
 
+    // *--------- SIDE NAV ---------*
+    @import 'components/side-nav';
+
+
     // *--------- LANGUAGE SETTINGS ---------*
     @import 'components/language-settings';
 
